[gd_scene load_steps=58 format=2]

[ext_resource path="res://sprites/room.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/Sophia.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/speech.png" type="Texture" id=3]
[ext_resource path="res://sounds/Hopeful.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/rooms/BroomRoom.gd" type="Script" id=5]
[ext_resource path="res://sounds/booom.wav" type="AudioStream" id=6]
[ext_resource path="res://sprites/speech2.png" type="Texture" id=7]
[ext_resource path="res://scenes/objects/Material.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/items/twine.png" type="Texture" id=9]
[ext_resource path="res://sprites/items/stick.png" type="Texture" id=10]
[ext_resource path="res://sprites/items/swiffer.png" type="Texture" id=11]
[ext_resource path="res://sprites/items/clippers.png" type="Texture" id=12]
[ext_resource path="res://sprites/items/branch.png" type="Texture" id=13]
[ext_resource path="res://sprites/items/twigs.png" type="Texture" id=14]
[ext_resource path="res://sprites/items/broom.png" type="Texture" id=15]
[ext_resource path="res://sounds/Wah wah wah but major.wav" type="AudioStream" id=16]
[ext_resource path="res://sprites/fadeout/fadeout0021.png" type="Texture" id=17]
[ext_resource path="res://sprites/fadeout/fadeout0023.png" type="Texture" id=18]
[ext_resource path="res://sprites/fadeout/fadeout0024.png" type="Texture" id=19]
[ext_resource path="res://sprites/fadeout/fadeout0022.png" type="Texture" id=20]
[ext_resource path="res://sprites/fadeout/fadeout0020.png" type="Texture" id=21]
[ext_resource path="res://sprites/fadeout/fadeout0012.png" type="Texture" id=22]
[ext_resource path="res://sprites/fadeout/fadeout0009.png" type="Texture" id=23]
[ext_resource path="res://sprites/fadeout/fadeout0015.png" type="Texture" id=24]
[ext_resource path="res://sprites/fadeout/fadeout0017.png" type="Texture" id=25]
[ext_resource path="res://sprites/fadeout/fadeout0016.png" type="Texture" id=26]
[ext_resource path="res://sprites/fadeout/fadeout0018.png" type="Texture" id=27]
[ext_resource path="res://sprites/fadeout/fadeout0011.png" type="Texture" id=28]
[ext_resource path="res://sprites/fadeout/fadeout0019.png" type="Texture" id=29]
[ext_resource path="res://sprites/fadeout/fadeout0010.png" type="Texture" id=30]
[ext_resource path="res://sprites/fadeout/fadeout0014.png" type="Texture" id=31]
[ext_resource path="res://sprites/fadeout/fadeout0013.png" type="Texture" id=32]
[ext_resource path="res://sprites/fadeout/fadeout0025.png" type="Texture" id=33]
[ext_resource path="res://sprites/fadeout/fadeout0027.png" type="Texture" id=34]
[ext_resource path="res://sprites/fadeout/fadeout0028.png" type="Texture" id=35]
[ext_resource path="res://sprites/fadeout/fadeout0000.png" type="Texture" id=36]
[ext_resource path="res://sprites/fadeout/fadeout0001.png" type="Texture" id=37]
[ext_resource path="res://sprites/fadeout/fadeout0002.png" type="Texture" id=38]
[ext_resource path="res://sprites/fadeout/fadeout0006.png" type="Texture" id=39]
[ext_resource path="res://sprites/fadeout/fadeout0004.png" type="Texture" id=40]
[ext_resource path="res://sprites/fadeout/fadeout0003.png" type="Texture" id=41]
[ext_resource path="res://sprites/fadeout/fadeout0005.png" type="Texture" id=42]
[ext_resource path="res://sprites/fadeout/fadeout0007.png" type="Texture" id=43]
[ext_resource path="res://sprites/fadeout/fadeout0008.png" type="Texture" id=44]
[ext_resource path="res://sprites/fadeout/fadeout0029.png" type="Texture" id=45]
[ext_resource path="res://sprites/fadeout/fadeout0036.png" type="Texture" id=46]
[ext_resource path="res://sprites/fadeout/fadeout0031.png" type="Texture" id=47]
[ext_resource path="res://sprites/fadeout/fadeout0039.png" type="Texture" id=48]
[ext_resource path="res://sprites/fadeout/fadeout0037.png" type="Texture" id=49]
[ext_resource path="res://sprites/fadeout/fadeout0030.png" type="Texture" id=50]
[ext_resource path="res://sprites/fadeout/fadeout0033.png" type="Texture" id=51]
[ext_resource path="res://sprites/fadeout/fadeout0038.png" type="Texture" id=52]
[ext_resource path="res://sprites/fadeout/fadeout0032.png" type="Texture" id=53]
[ext_resource path="res://sprites/fadeout/fadeout0034.png" type="Texture" id=54]
[ext_resource path="res://sprites/fadeout/fadeout0035.png" type="Texture" id=55]
[ext_resource path="res://sprites/fadeout/fadeout0040.png" type="Texture" id=56]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 23 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 45 ), ExtResource( 50 ), ExtResource( 47 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 46 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 48 ), ExtResource( 56 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[node name="Room1" type="Sprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sophia" parent="." instance=ExtResource( 2 )]
position = Vector2( 248, 175 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Speech" type="Label" parent="Sprite"]
margin_left = 161.0
margin_top = 40.0
margin_right = 323.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 7 )
centered = false

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="EndTune" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="swiffer" parent="." groups=[
"start_mats",
] instance=ExtResource( 8 )]
position = Vector2( 312, 202.252 )
material_name = "swiffer"
material_desc = "This isn't a proper broom, is it?"

[node name="Sprite" parent="swiffer" index="0"]
texture = ExtResource( 11 )

[node name="branch" parent="." groups=[
"start_mats",
] instance=ExtResource( 8 )]
position = Vector2( 373.046, 153.354 )
material_name = "branch"
material_desc = "I wonder if I can make this branch more usable?"

[node name="Sprite" parent="branch" index="0"]
texture = ExtResource( 13 )

[node name="clippers" parent="." groups=[
"start_mats",
] instance=ExtResource( 8 )]
position = Vector2( 184, 217.354 )
material_name = "clippers"
material_desc = "These clippers are sharp!"

[node name="Sprite" parent="clippers" index="0"]
texture = ExtResource( 12 )

[node name="stick" parent="." instance=ExtResource( 8 )]
position = Vector2( 269.6, 239 )
material_name = "stick"
material_desc = "It's not a broomstick without the stick!"

[node name="Sprite" parent="stick" index="0"]
texture = ExtResource( 10 )

[node name="twigs" parent="." instance=ExtResource( 8 )]
position = Vector2( 216, 239 )
material_name = "twigs"
material_desc = "Can I make use of these leftover twigs?"

[node name="Sprite" parent="twigs" index="0"]
texture = ExtResource( 14 )

[node name="twine" parent="." groups=[
"start_mats",
] instance=ExtResource( 8 )]
position = Vector2( 151.707, 170.252 )
material_name = "twine"
material_desc = "This is some sturdy twine."

[node name="Sprite" parent="twine" index="0"]
texture = ExtResource( 9 )

[node name="broom" parent="." instance=ExtResource( 8 )]
position = Vector2( 93.6589, 40 )
material_name = "broom"
material_desc = "Perfect! Now to go for a test flight!"

[node name="Sprite" parent="broom" index="0"]
texture = ExtResource( 15 )

[node name="fadeout" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}
[connection signal="finished" from="EndTune" to="." method="_on_EndTune_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="swiffer"]

[editable path="branch"]

[editable path="clippers"]

[editable path="stick"]

[editable path="twigs"]

[editable path="twine"]

[editable path="broom"]
